--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,10 +78,8 @@ ul.submenu > li:not(:last-child) {
   border-bottom: 3px solid #111312;
   margin-right: 20px;
 }
-ul.submenu > li > a:hover{
+ul.submenu > li > a{
   color: #222222;
-  opacity:1;
-  text-decoration: underline;
 }
 
 .indent {
